; ModuleID = '/home/carl/AnghaBench/linux/drivers/block/paride/extr_fit2.c_fit2_read_regr.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/block/paride/extr_fit2.c_fit2_read_regr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32)* @fit2_read_regr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fit2_read_regr(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %11 = load i32, i32* %6, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %18

13:                                               ; preds = %3
  %14 = load i32, i32* %7, align 4
  %15 = icmp ne i32 %14, 6
  br i1 %15, label %16, label %17

16:                                               ; preds = %13
  store i32 255, i32* %4, align 4
  br label %35

17:                                               ; preds = %13
  store i32 7, i32* %10, align 4
  br label %21

18:                                               ; preds = %3
  %19 = load i32, i32* %7, align 4
  %20 = add nsw i32 %19, 16
  store i32 %20, i32* %10, align 4
  br label %21

21:                                               ; preds = %18, %17
  %22 = call i32 @w2(i32 12)
  %23 = load i32, i32* %10, align 4
  %24 = call i32 @w0(i32 %23)
  %25 = call i32 @w2(i32 4)
  %26 = call i32 @w2(i32 5)
  %27 = call i32 @w0(i32 0)
  %28 = call i32 (...) @r1()
  store i32 %28, i32* %8, align 4
  %29 = call i32 @w0(i32 1)
  %30 = call i32 (...) @r1()
  store i32 %30, i32* %9, align 4
  %31 = call i32 @w2(i32 4)
  %32 = load i32, i32* %8, align 4
  %33 = load i32, i32* %9, align 4
  %34 = call i32 @j44(i32 %32, i32 %33)
  store i32 %34, i32* %4, align 4
  br label %35

35:                                               ; preds = %21, %16
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}

declare dso_local i32 @w2(i32) #1

declare dso_local i32 @w0(i32) #1

declare dso_local i32 @r1(...) #1

declare dso_local i32 @j44(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
